<resources>
    <string name="app_name">ShoeShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_in_with_an_existing_account">Login in with an existing account</string>
    <string name="instructions">instructions</string>
    <string name="first_screen_move_to_second_screen_and_so_on">first Screen move to Second Screen.....and so on........</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_in_the_app_shoeshop_everything_do_you_want_here">welcome in the app shoeShop everything do you want here....</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="company">company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="desc">Description</string>
    <string name="shoeSize"> %.1f</string>
    <string name="name">Name</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="cancel">Cancel</string>
</resources>