<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.login.LoginFragment">

        <TextView

            android:textSize="@dimen/_18ssp"
            android:padding="@dimen/_5sdp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/Email" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <TextView

            android:textSize="@dimen/_18ssp"
            android:padding="@dimen/_5sdp"
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/password" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            app:cornerRadius="@dimen/_10sdp"
            android:text="@string/login"
            android:id="@+id/login"
            android:textSize="@dimen/_18ssp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:cornerRadius="@dimen/_10sdp"
            android:text="@string/login_in_with_an_existing_account"
            android:id="@+id/existingLoginBtn"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</layout>