<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <!--    is a view group that aligns all children in a single direction, vertically or horizontally.-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.onboarding.OnBoardFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_22ssp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/welcome_in_the_app_shoeshop_everything_do_you_want_here"
            android:textSize="16sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:textSize="@dimen/_18ssp"
            android:textAllCaps="false"
            android:text="@string/next"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_margin="@dimen/_15sdp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>